ADD blog and change wording feature

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                                 class="sr-only">(current)</span></a>
                         <a class="nav-item nav-link" href="#">About Us</a>
                         <a class="nav-item nav-link" href="#">Careers</a>
+                        <a class="nav-item nav-link" href="https://blog.dailitech.com" target="_blank">Blog</a>
                     </div>
                 </div>
             </div>
@@ -127,10 +128,9 @@
                             <h5 class="text-center color__blue font-weight-bold mt-4">Team Building</h5>
 
                             <p class="text-center mt-4 color__text">
+                                Introduction to AWS<br />
                                 Training<br />
-                                Certification<br />
-                                Private/Public Class<br />
-                                Introduction to AWS
+                                Workshop
                             </p>
                         </div>
                     </div>
@@ -145,10 +145,10 @@
                             </h5>
 
                             <p class="text-center mt-4 color__text">
-                                Assessment<br />
-                                Data Migration<br />
-                                Change Management<br />
-                                System Migration
+                                System Migration <br />
+                                Application Modenizatiaon <br />
+                                New Application <br />
+                                Opearations Support
                             </p>
                         </div>
                     </div>
@@ -164,8 +164,8 @@
 
                             <p class="text-center mt-4 color__text">
                                 Cost Optimization <br />
-                                Security Enhancement <br />
-                                Architecture Improvement <br />
+                                Well-Architected Review <br />
+                                Security Improvement <br />
                                 DevOps <br />
                                 Serverless
                             </p>
@@ -181,10 +181,10 @@
                                 Innovation
                             </h5>
                             <p class="text-center mt-4 color__text">
-                                AI Solutions Building <br />
-                                Text Analytic <br />
-                                IoT <br />
-                                Recognition
+                                AI / ML <br />
+                                Big Data Analytics <br />
+                                Text Analytics <br />
+                                Internet of Things
                             </p>
                         </div>
                     </div>
