--- a/index.html
+++ b/index.html
@@ -132,7 +132,9 @@
                             <p class="text-center mt-4 color__text">
                                 Introduction to AWS<br />
                                 Training<br />
-                                Workshop
+                                Workshop<br />
+                                Cerification <br />
+                                Private/Public Class
                             </p>
                         </div>
                     </div>
@@ -147,10 +149,12 @@
                             </h5>
 
                             <p class="text-center mt-4 color__text">
+                                Data Migration <br />
                                 System Migration <br />
                                 Application Modenizatiaon <br />
                                 New Application <br />
-                                Opearations Support
+                                Opearations Support <br />
+                                Change Management 
                             </p>
                         </div>
                     </div>
@@ -169,7 +173,8 @@
                                 Well-Architected Review <br />
                                 Security Improvement <br />
                                 DevOps <br />
-                                Serverless
+                                Serverless <br />
+                                Improvement
                             </p>
                         </div>
                     </div>
@@ -186,7 +191,8 @@
                                 AI / ML <br />
                                 Big Data Analytics <br />
                                 Text Analytics <br />
-                                Internet of Things
+                                Internet of Things <br />
+                                Recognition
                             </p>
                         </div>
                     </div>
