--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
             </h2>
             <div class="line"></div>
             <h1 class="my-5">
-                When working with us,You can expect more
+                Be a part of our DailiTech’s family, you can expect more.
             </h1>
         </div>
         <div class="row">
@@ -358,15 +358,15 @@
 
                 <div class="col-md-4 text-white">
                     <p>Email: contact@dailitech.com</p>
-                    <p>Tel: 095-724-5441</p>
+                    <p>Tel: 061-569-5288</p>
                     <p>www.dailitech.com</p>
                 </div>
 
                 <div class="col-md-4 row">
-                    <div class="col-md-6">
+                    <div class="col">
                         <img src="./img/dailitech-logo.png" alt="" width="100%">
                     </div>
-                    <div class="col-md-6">
+                    <div class="col">
                         <img src="./img/partner-logo.png" alt="" width="100%">
                     </div>
                 </div>
