--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
             <!-- AWARD -->
             <div class="our__awards" id="achievement">
                 <h2 class="text__verticle text__subtitle font-weight-bold color__dailitech">
-                    AWARDS
+                    ACHIEVEMENT
                 </h2>
                 <div class="line"></div>
                 <h1 class="my-5">
@@ -221,7 +221,7 @@
                 <div class="col-md-5 ">
                     <div class="mt-5">
                         <h1 class="color__purple font-weight-bold">
-                            AWARDS
+                            ACHIEVEMENT
                         </h1>
                         <p class="color__text mt-5">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sed ligula fermentum,
@@ -376,13 +376,13 @@
 
         <div class="footer p-4" style="margin-top: 100px;">
             <div class="container">
-                <div class="text-white">
+                <!-- <div class="text-white">
                     <a href="" class="text-white"> Services </a> |
                     <a href="" class="text-white"> About Us </a> |
                     <a href="" class="text-white"> Careers </a>
-                </div>
+                </div> -->
 
-                <div class="row mt-5">
+                <div class="row mt-3">
                     <div class="col-md-4 text-white">
                         <h1 class="font-weight-bold mb-0">
                             Contact Us
