--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     </div>
                 </div>
             </div>
-            <div class="sponsor__container">
+            <!-- <div class="sponsor__container">
                 <div class="sponsors">
                     <div class="sponsor__item">
                         <img src="https://d1.awsstatic.com/AWS%20Canada/hero_illustration1.d5bfa72f3777e68c08d8575464e9f839902da907.png"
@@ -92,7 +92,7 @@
                             alt="">
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
 
         <img src="./img/hexagon.png" alt="" class="hex__topleft">
@@ -262,7 +262,7 @@
                         <div class="col-md-1"></div>
                         <!-- Img Slide -->
                         <div class="col-md-6">
-                            <img src="./img/award-demo.png" alt="" width="100%" />
+                            <img src="./img/trophy.png" alt="" width="100%" />
                         </div>
                     </div>
                 </div>
