--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 </h1>
 
                 <div class="row services__card">
-                    <div class="col-md-3 animated fadeInUp slow">
+                    <div class="col-md-6 col-lg-3 animated fadeInUp slow">
                         <div class="card">
                             <div class="card-body">
                                 <img src="./img/icon-teambuilding.png" alt="" width="100%">
@@ -141,7 +141,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3 animated fadeInUp slow">
+                    <div class="col-md-6 col-lg-3 animated fadeInUp slow mt-xs-20px">
                         <div class="card">
                             <div class="card-body">
                                 <img src="./img/icon-transformation.png" alt="" width="100%">
@@ -161,7 +161,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3 animated fadeInUp slow">
+                    <div class="col-md-6 col-lg-3 animated fadeInUp slow last2__feature mt-xs-20px" >
                         <div class="card">
                             <div class="card-body">
                                 <img src="./img/icon-optimization.png" alt="" width="100%">
@@ -181,7 +181,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3 animated fadeInUp slow">
+                    <div class="col-md-6 col-lg-3 animated fadeInUp slow last1__feature mt-xs-20px">
                         <div class="card">
                             <div class="card-body">
                                 <img src="./img/icon-innovation.png" alt="" width="100%">
@@ -402,7 +402,7 @@
             <div class="row">
                 <div class="col-md-12 col-lg-6">
                     <div class="row benefit__container">
-                        <div class="col-md-6 animated fadeIn">
+                        <div class="col-md-6 animated fadeIn px-8px">
                             <div class="card">
                                 <div class="card-body">
 
@@ -418,7 +418,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-6 animated fadeIn">
+                        <div class="col-md-6 animated fadeIn px-8px">
                             <div class="card">
                                 <div class="card-body">
                                     <div class="benefit__title color__green">
@@ -433,7 +433,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-6 animated fadeIn">
+                        <div class="col-md-6 animated fadeIn px-8px">
                             <div class="card">
                                 <div class="card-body">
                                     <div class="benefit__title color__pink">
@@ -448,7 +448,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-6 animated fadeIn mansory">
+                        <div class="col-md-6 animated fadeIn mansory px-8px">
                             <div class="card">
                                 <div class="card-body">
                                     <div class="benefit__title color__yellow">
@@ -527,7 +527,7 @@
 
                     <div class="col-md-4 text-white">
                         <p class="text-white"> <i class="far fa-envelope"></i> contact@dailitech.com</p>
-                        <p class="text-white"><i class="fas fa-phone-alt"></i> 061-569-5288</p>
+                        <p class="text-white" style="color: white;"><i class="fas fa-phone-alt"></i> 061-569-5288</p>
                         <p class="text-white">www.dailitech.com</p>
                     </div>
 
