--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <div class="container">
             <div class="our__services mb-5" id="services">
                 <h2 class="text__verticle text__subtitle font-weight-bold color__dailitech">
-                    SERVICES
+                    <!-- SERVICES -->
                 </h2>
                 <div class="line"></div>
                 <h1 class="my-5">
@@ -140,6 +140,12 @@
                                 </p>
                             </div>
                         </div>
+
+                        <div class="case__container">
+                            <button class="btn building" onclick="changePageTo('saas')">
+                                Our Study Case - SaaS
+                            </button>
+                        </div>
                     </div>
                     <div class="col-md-6 col-lg-3 animated fadeInUp slow mt-xs-20px">
                         <div class="card">
@@ -159,6 +165,11 @@
                                     Change Management
                                 </p>
                             </div>
+                        </div>
+                        <div class="case__container">
+                            <button class="btn tranformation"  onclick="changePageTo('iaas')">
+                                Our Study Case - IaaS
+                            </button>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-3 animated fadeInUp slow last2__feature mt-xs-20px" >
@@ -180,6 +191,11 @@
                                 </p>
                             </div>
                         </div>
+                        <div class="case__container">
+                            <button class="btn optimization" onclick="changePageTo('mobile')">
+                                Our Study Case - Mobile
+                            </button>
+                        </div>
                     </div>
                     <div class="col-md-6 col-lg-3 animated fadeInUp slow last1__feature mt-xs-20px">
                         <div class="card">
@@ -198,19 +214,21 @@
                                 </p>
                             </div>
                         </div>
+                        <div class="case__container">
+                            <button class="btn innovation" onclick="changePageTo('bigdata')">
+                                Our Study Case - Big Data
+                            </button>
+                        </div>
                     </div>
-
                     <img src="./img/circle.png" alt="" class="circle__left">
-
                 </div>
-
             </div>
             <img src="./img/circle.png" alt="" class="circle__right">
 
             <!-- AWARD -->
             <div class="our__awards" id="achievement">
                 <h2 class="text__verticle text__subtitle font-weight-bold color__dailitech">
-                    ACHIEVEMENT
+                    <!-- ACHIEVEMENT -->
                 </h2>
                 <div class="line"></div>
                 <h1 class="my-5">
@@ -387,7 +405,7 @@
             <img src="./img/circle.png" alt="" class="circle__left">
             <div class="career" id="career">
                 <h2 class="text__verticle text__subtitle font-weight-bold color__dailitech">
-                    CAREERS
+                    <!-- CAREERS -->
                 </h2>
                 <div class="line"></div>
                 <h1 class="mt-5 mb-3">
@@ -476,7 +494,7 @@
 
             <div class="contact" id="contact">
                 <h2 class="text__verticle text__subtitle font-weight-bold color__dailitech">
-                    CONTACT US
+                    <!-- CONTACT US -->
                 </h2>
                 <div class="line"></div>
                 <h1 class="my-5">
@@ -591,6 +609,12 @@
         }
         x[slideIndex[no] - 1].style.display = "block";
     }
+
+    function changePageTo(page) {
+        document.location.href = page + ".html";
+    }
+
+
 </script>
 
 </html>
