--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
                             </div>
                         </div>
 
-                        <div class="case__container">
-                            <button class="btn building" onclick="changePageTo('saas')">
+                        <div class="case__container  mt-3">
+                            <button class="btn " onclick="changePageTo('saas')">
                                 Our Study Case - SaaS
                             </button>
                         </div>
@@ -166,8 +166,8 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="case__container">
-                            <button class="btn tranformation"  onclick="changePageTo('iaas')">
+                        <div class="case__container  mt-3">
+                            <button class="btn "  onclick="changePageTo('iaas')">
                                 Our Study Case - IaaS
                             </button>
                         </div>
@@ -191,8 +191,9 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="case__container">
-                            <button class="btn optimization" onclick="changePageTo('mobile')">
+                        <div class="case__container  mt-3">
+                            <button class="btn ">
+                            <!-- <button class="btn optimization" onclick="changePageTo('mobile')"> -->
                                 Our Study Case - Mobile
                             </button>
                         </div>
@@ -214,8 +215,9 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="case__container">
-                            <button class="btn innovation" onclick="changePageTo('bigdata')">
+                        <div class="case__container mt-3">
+                            <!-- <button class="btn innovation" onclick="changePageTo('bigdata')"> -->
+                            <button class="btn ">
                                 Our Study Case - Big Data
                             </button>
                         </div>
