--- a/iaas.html
+++ b/iaas.html
@@ -25,7 +25,7 @@
     <div class="header">
         <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container">
-                <a class="navbar-brand d-flex align-items-center" href="#">
+                <a class="navbar-brand d-flex align-items-center" href="index.html">
                     <img src="./img/dailitech-logo.png" width="70" height="70" class="d-inline-block align-top" alt="">
                     <p class="dailitech__wordmark">DAILITECH</p>
                 </a>
@@ -34,13 +34,13 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
-                    <div class="navbar-nav">
+                    <!-- <div class="navbar-nav">
                         <a class="nav-item nav-link scrollToDiv" href="#services">Services</a>
                         <a class="nav-item nav-link scrollToDiv" href="#achievement">Achievement</a>
                         <a class="nav-item nav-link scrollToDiv" href="#career">Careers</a>
                         <a class="nav-item nav-link scrollToDiv" href="#contact">Contact us</a>
                         <a class="nav-item nav-link" href="https://blog.dailitech.com" target="_blank">Blog</a>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </nav>
