--- a/index.html
+++ b/index.html
@@ -140,12 +140,6 @@
                                 </p>
                             </div>
                         </div>
-
-                        <div class="case__container  mt-3">
-                            <button class="btn " onclick="changePageTo('saas')">
-                                Our Study Case - SaaS
-                            </button>
-                        </div>
                     </div>
                     <div class="col-md-6 col-lg-3 animated fadeInUp slow mt-xs-20px">
                         <div class="card">
@@ -166,13 +160,8 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="case__container  mt-3">
-                            <button class="btn "  onclick="changePageTo('iaas')">
-                                Our Study Case - IaaS
-                            </button>
-                        </div>
                     </div>
-                    <div class="col-md-6 col-lg-3 animated fadeInUp slow last2__feature mt-xs-20px" >
+                    <div class="col-md-6 col-lg-3 animated fadeInUp slow last2__feature mt-xs-20px">
                         <div class="card">
                             <div class="card-body">
                                 <img src="./img/icon-optimization.png" alt="" width="100%">
@@ -190,12 +179,6 @@
                                     Improvement
                                 </p>
                             </div>
-                        </div>
-                        <div class="case__container  mt-3">
-                            <button class="btn ">
-                            <!-- <button class="btn optimization" onclick="changePageTo('mobile')"> -->
-                                Our Study Case - Mobile
-                            </button>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-3 animated fadeInUp slow last1__feature mt-xs-20px">
@@ -215,6 +198,41 @@
                                 </p>
                             </div>
                         </div>
+
+                    </div>
+                    <img src="./img/circle.png" alt="" class="circle__left">
+                </div>
+            </div>
+            <!-- CASE Study -->
+            <div class="mt-5">
+                <div class="line" style="margin: 0 auto;"></div>
+                <h1 class="my-5 text-center">
+                    Our Study Case
+                </h1>
+                <div class="row">
+                    <div class="col-md-6 col-lg-3">
+                        <div class="case__container  mt-3">
+                            <button class="btn " onclick="changePageTo('case-study-saas')">
+                                Our Study Case - SaaS
+                            </button>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-3">
+                        <div class="case__container  mt-3">
+                            <button class="btn " onclick="changePageTo('iaas')">
+                                Our Study Case - IaaS
+                            </button>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-3">
+                        <div class="case__container  mt-3">
+                            <button class="btn ">
+                                <!-- <button class="btn optimization" onclick="changePageTo('mobile')"> -->
+                                Our Study Case - Mobile
+                            </button>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-3">
                         <div class="case__container mt-3">
                             <!-- <button class="btn innovation" onclick="changePageTo('bigdata')"> -->
                             <button class="btn ">
@@ -222,8 +240,8 @@
                             </button>
                         </div>
                     </div>
-                    <img src="./img/circle.png" alt="" class="circle__left">
                 </div>
+
             </div>
             <img src="./img/circle.png" alt="" class="circle__right">
 
@@ -295,7 +313,7 @@
                     #       
                     ####### 
                  -->
-                <div class="mySlides1  animated fadeIn slow" >
+                <div class="mySlides1  animated fadeIn slow">
                     <div class="row m-2">
                         <div class="col-md-5 mb-3">
                             <div class="mt-5">
@@ -358,7 +376,8 @@
                             <div class="mt-5">
                                 <p class="color__text mt-5">
                                     <strong class="achievement__title color__pink"> Customer References</strong>
-                                    <strong>DailiTech has been trusted to be a consultant of top listed public company in Stock Exchange of Thailand not limited to following sectors.
+                                    <strong>DailiTech has been trusted to be a consultant of top listed public company
+                                        in Stock Exchange of Thailand not limited to following sectors.
                                     </strong>
                                     <ul>
                                         <li>
@@ -615,8 +634,6 @@
     function changePageTo(page) {
         document.location.href = page + ".html";
     }
-
-
 </script>
 
 </html>
